Bug 170863 - Mainwindow often grows larger than screen size
Summary: Mainwindow often grows larger than screen size
Status: RESOLVED FIXED
Alias: None
Product: kdevplatform
Classification: Developer tools
Component: sublime (other bugs)
Version First Reported In: git master
Platform: unspecified Linux
: NOR normal
Target Milestone: 1.0.0
Assignee: kdevelop-bugs-null
URL:
Keywords:
: 183547 188874 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-09-11 16:37 UTC by Kishore
Modified: 2009-06-02 18:34 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kishore 2008-09-11 16:37:55 UTC
Version:           3.9.0 (using 4.1.65 (KDE 4.1.65 (KDE 4.2 >= 20080903)), compiled sources)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.24-21-generic

Invoking the replace dialog (ctrl+r) causes the kdevelop window to resize (even when maximized) resulting in the window becoming larger than the screen in my case. It seems like the minimum size is set since i can not manually resize to anything smaller in height when the replace dialog is open.
Comment 1 Andreas Pakulat 2008-09-11 17:12:26 UTC
It does and indeed kate doesn't have the problem. This could be related to our mainwindow gui. OTOH it could also be that katepart changes its preferred size and we're just giving it the space if we have it on the desktop.
Comment 2 mbreugel 2008-10-04 11:43:50 UTC
This is currently the most annoying thing for me. voted.

It will completely push the lower toolviews off-screen. This only seems to happen when there's vertical toolviews open. Hide the vertical toolviews and the mainwindow will resize normally again.
Comment 3 Andreas Pakulat 2008-11-27 22:33:38 UTC
Clicking the maximize buttons also doesn't work. There's a short flicker as if it tries to resize, but then it goes back to being larger than the available space (i.e. resize behind the panel).

I'm pretty sure this is due to our toolview-implementation.
Comment 4 mbreugel 2008-11-28 11:51:39 UTC
I'm 100%: it's easy to reproduce this with only toolviews (zero files open).
Comment 5 Andreas Pakulat 2008-11-28 15:02:52 UTC
How? I mean how do you trigger the resize without a file?

Also this doesn't seem to happen under a kde3 desktop. So maybe plasma or kwin (not sure which component is responsible here) just fail to make sure the window doesn't get larger...
Comment 6 mbreugel 2008-11-28 17:57:53 UTC
Seems to happen only with certain toolviews on specific positions. eg left project, right qtest, bottom code browser. Then close/open a bit.
Comment 7 Andreas Pakulat 2009-02-07 13:17:52 UTC
*** Bug 183547 has been marked as a duplicate of this bug. ***
Comment 8 Andreas Pakulat 2009-04-05 15:55:24 UTC
*** Bug 188874 has been marked as a duplicate of this bug. ***
Comment 9 Thomas McGuire 2009-04-17 20:08:17 UTC
> This is currently the most annoying thing for me. voted.

+1, this is indeed very annoying.
Comment 10 Kishore 2009-04-22 13:47:38 UTC
I recently got a netbook which has a screen resolution of 1024*600. Now the window resizes even when the tool view is closed. It resizes to larger size when a tool view to the side is open. So it seems to be resolution dependent.
Comment 11 Thomas McGuire 2009-05-28 21:44:57 UTC
Any news on this? This is the most annoying bug in KDevelop, and triggers _very_ often, either by opening toolviews on the left sidebar or by opening the find or replace dialog.
Comment 12 Andreas Pakulat 2009-05-28 23:30:04 UTC
(In reply to comment #11)
> Any news on this? This is the most annoying bug in KDevelop, and triggers
> _very_ often, either by opening toolviews on the left sidebar or by opening the
> find or replace dialog.

No, its really hard to debug this as its related to the layouting and sizeHinting between KMainWindow, KDevelop's own layout for the ideal-ui and the katepart.
Comment 13 Thomas McGuire 2009-06-02 18:34:27 UTC
SVN commit 976783 by tmcguire:

Don't confuse width and height.
This seems to fix the problem that the main window would grow bigger than the screen.

BUG: 170863


 M  +1 -1      ideallayout.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=976783