Don't confuse width and height. This seems to fix the problem that the main window would grow bigger than the screen.

BUG: 170863